# revenue-poc-v2

./: .gitignore  ANALYSIS_VALIDATION.md  CURRENT_FUTURE_STATUS.md  INTERNAL_DEV_SOP.md  MULTI_AGENT_ASSISTANT.md  PROGRESS_REPORT.md  README.md  SDD.md  TECHNICAL_REPORT.md  UV_SETUP.md  V2_PLAN.md  WORK_SPLIT.md  agent_cli.py  analysis_pipeline.py  analysis_rubrics.py  analysis_tools.py  analyzer.py  answer_contract.py  answer_plan.py  answer_policy.py  business_answer_templates.py  business_question_classifier.py  config.py  data_loader.py  demo_web.py  devlog.md  evidence_projector.py  llm_planner.py  llm_reporter.py  llm_rewriter.py  logging_utils.py  main.py  mapping_parser.py  multi_agent.py  ollama_client.py  package-lock.json  preprocess.py  pyproject.toml  qa_engine.py  requirements.txt  (+5 more)
data/: inventory.xlsx  mapping.xlsx  revenue.xlsx
docs/: analysis_tools_phase6.md  api_status_endpoints.md  demo_checklist.md  frontend_consolidation_plan.md  llm_planner.md  llm_rewriter.md  mobile_demo_archive_checklist.md  phase8_response_logic.md  pipeline_architecture.md
eval/: demo_smoke_report.md  demo_smoke_results.csv  eval_report.md  eval_results.csv  llm_live_smoke_report.md  llm_live_smoke_results.csv  llm_planner_eval_report.md  llm_planner_eval_results.csv  questions_answer.jsonl  questions_router.jsonl  run_eval.py
frontend/: README.md  package-lock.json  package.json
output/: analysis_report.md  cleaned_inventory.xlsx  cleaned_revenue.xlsx  llm_explanation.md  merged_analysis.xlsx  parsed_mapping.xlsx  summary_metrics.xlsx
scripts/: demo_smoke.py  (+7 more)
(+38 files in other folders)
