[project]
name = "revenue-anonymization-poc"
version = "0.1.0"
description = "Excel-based revenue and inventory analysis with anonymization mapping and multi-agent QA."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
]

[tool.uv]
package = false
